<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bgcovid">
    <LinearLayout
        android:layout_marginTop="300dp"
        android:background="@drawable/circle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="0dp">
        <androidx.core.widget.NestedScrollView
            android:layout_marginTop="55dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:textStyle="bold"
                android:textSize="@dimen/textSizeForDetail"
                android:id="@+id/worldCases"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="5dp"
                android:text="@string/totalCases"
                android:textColor="@color/colorBlack" />

            <TextView
                android:textStyle="bold"
                android:textSize="@dimen/textSizeForDetail"
                android:id="@+id/worldTodayCases"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="5dp"
                android:text="@string/todayCases"
                android:textColor="@color/colorBlack" />

            <TextView
                android:textStyle="bold"
                android:textSize="@dimen/textSizeForDetail"
                android:id="@+id/worldDeath"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="5dp"
                android:text="@string/totalDeaths"
                android:textColor="@color/colorBlack" />

            <TextView
                android:textStyle="bold"
                android:textSize="@dimen/textSizeForDetail"
                android:id="@+id/worldTodayDeath"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="5dp"
                android:text="@string/todayDeaths"
                android:textColor="@color/colorBlack" />

            <TextView
                android:textStyle="bold"
                android:textSize="@dimen/textSizeForDetail"
                android:id="@+id/worldRecovers"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="5dp"
                android:text="@string/totalRecovers"
                android:textColor="@color/colorRecovery" />

            <TextView
                android:textStyle="bold"
                android:textSize="@dimen/textSizeForDetail"
                android:id="@+id/worldActive"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="5dp"
                android:text="@string/totalActive"
                android:textColor="@color/colorBlack" />

            <TextView
                android:textStyle="bold"
                android:textSize="@dimen/textSizeForDetail"
                android:id="@+id/worldCritical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="5dp"
                android:text="@string/totalCritical"
                android:textColor="@color/colorCritical" />
        </LinearLayout>

        </androidx.core.widget.NestedScrollView>
    </LinearLayout>


    <ImageView
        android:layout_centerHorizontal="true"
        android:id="@+id/imageWorld"
        android:layout_width="380dp"
        android:layout_height="380dp"
        android:elevation="5dp" />
</RelativeLayout>