<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailCountry"
    android:orientation="vertical"
    android:background="@drawable/bgcovid">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:padding="20dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:textStyle="bold"
                android:id="@+id/detailCountry"
                android:layout_margin="5dp"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/titleTextDetail"
                android:layout_gravity="center"
                android:text="Country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <ImageView
            android:layout_gravity="center"
            android:id="@+id/flagDetail"
            android:layout_width="124dp"
            android:layout_height="124dp"
            android:transitionName="countryFlagTransition"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:textSize="@dimen/textSizeForDetail"
                        android:textStyle="bold"
                        android:layout_margin="5dp"
                        android:textColor="@color/colorBlack"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/totalCases"/>

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        app:cardCornerRadius="7dp"
                        android:elevation="25dp"
                        android:layout_margin="5dp"
                        android:focusable="true"
                        android:theme="@style/Theme.MaterialComponents.CardCreateStyle">
                        <LinearLayout
                            android:layout_margin="10dp"
                            android:layout_gravity="center"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">
                            <TextView
                                android:textStyle="bold"
                                android:textSize="@dimen/textSizeForDetail"
                                android:textColor="@color/colorBlack"
                                android:id="@+id/detailTotalCase"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/totalCases" />
                        </LinearLayout>
                    </com.google.android.material.card.MaterialCardView>
                    <TextView
                        android:textSize="@dimen/textSizeForDetail"
                        android:textStyle="bold"
                        android:layout_margin="5dp"
                        android:textColor="@color/colorBlack"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/todayCases"/>
                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        app:cardCornerRadius="7dp"
                        android:elevation="25dp"
                        android:layout_margin="5dp"
                        android:focusable="true"
                        android:theme="@style/Theme.MaterialComponents.CardCreateStyle">
                        <LinearLayout
                            android:layout_margin="10dp"
                            android:layout_gravity="center"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">
                            <TextView
                                android:textStyle="bold"
                                android:textSize="@dimen/textSizeForDetail"
                                android:textColor="@color/colorBlack"
                                android:id="@+id/detailTodayCase"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/todayCases" />
                        </LinearLayout>
                    </com.google.android.material.card.MaterialCardView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/totalDeaths"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/textSizeForDetail"
                        android:textStyle="bold" />

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        app:cardCornerRadius="7dp"
                        android:elevation="25dp"
                        android:layout_margin="5dp"
                        android:focusable="true"
                        android:theme="@style/Theme.MaterialComponents.CardCreateStyle">
                        <LinearLayout
                            android:layout_margin="10dp"
                            android:layout_gravity="center"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">
                            <TextView
                                android:textStyle="bold"
                                android:textSize="@dimen/textSizeForDetail"
                                android:textColor="@color/colorBlack"
                                android:id="@+id/detailTotalDeath"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/totalDeaths" />
                        </LinearLayout>
                    </com.google.android.material.card.MaterialCardView>
                    <TextView
                        android:textSize="@dimen/textSizeForDetail"
                        android:textStyle="bold"
                        android:layout_margin="5dp"
                        android:textColor="@color/colorBlack"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/todayDeaths"/>
                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        app:cardCornerRadius="7dp"
                        android:elevation="25dp"
                        android:layout_margin="5dp"
                        android:focusable="true"
                        android:theme="@style/Theme.MaterialComponents.CardCreateStyle">
                        <LinearLayout
                            android:layout_margin="10dp"
                            android:layout_gravity="center"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">
                            <TextView
                                android:textStyle="bold"
                                android:textColor="@color/colorBlack"
                                android:textSize="@dimen/textSizeForDetail"
                                android:id="@+id/detailTodayDeath"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/todayDeaths" />
                        </LinearLayout>
                    </com.google.android.material.card.MaterialCardView>

                    <TextView
                        android:textSize="@dimen/textSizeForDetail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/totalRecovers"
                        android:textColor="@color/colorBlack"
                        android:textStyle="bold" />
                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        app:cardCornerRadius="7dp"
                        android:elevation="25dp"
                        android:layout_margin="5dp"
                        android:focusable="true"
                        android:theme="@style/Theme.MaterialComponents.CardCreateStyle">
                        <LinearLayout
                            android:layout_margin="10dp"
                            android:layout_gravity="center"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">
                            <TextView
                                android:textStyle="bold"
                                android:textColor="@color/colorRecovery"
                                android:textSize="@dimen/textSizeForDetail"
                                android:id="@+id/detailRecover"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/totalRecovers" />
                        </LinearLayout>
                    </com.google.android.material.card.MaterialCardView>
                    <TextView
                        android:textSize="@dimen/textSizeForDetail"
                        android:textStyle="bold"
                        android:layout_margin="5dp"
                        android:textColor="@color/colorBlack"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/totalActive"/>
                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        app:cardCornerRadius="7dp"
                        android:elevation="25dp"
                        android:layout_margin="5dp"
                        android:focusable="true"
                        android:theme="@style/Theme.MaterialComponents.CardCreateStyle">
                        <LinearLayout
                            android:layout_margin="10dp"
                            android:layout_gravity="center"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">
                            <TextView

                                android:textStyle="bold"
                                android:textSize="@dimen/textSizeForDetail"
                                android:textColor="@color/colorBlack"
                                android:id="@+id/detailTotalActive"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/totalActive" />
                        </LinearLayout>
                    </com.google.android.material.card.MaterialCardView>
                    <TextView
                        android:textSize="@dimen/textSizeForDetail"                        android:textStyle="bold"
                        android:layout_margin="5dp"
                        android:textColor="@color/colorBlack"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/totalCritical"/>
                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        app:cardCornerRadius="7dp"
                        android:elevation="25dp"
                        android:layout_margin="5dp"
                        android:focusable="true"
                        android:theme="@style/Theme.MaterialComponents.CardCreateStyle">
                        <LinearLayout
                            android:layout_margin="10dp"
                            android:layout_gravity="center"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">
                            <TextView
                                android:textStyle="bold"
                                android:textSize="@dimen/textSizeForDetail"
                                android:textColor="@color/colorCritical"
                                android:id="@+id/detailTotalCritical"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/totalCritical" />
                        </LinearLayout>
                    </com.google.android.material.card.MaterialCardView>

                </LinearLayout>
        </LinearLayout>

    </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>